--- a/app/src/main/res/layout/profile_screen.xml
+++ b/app/src/main/res/layout/profile_screen.xml
@@ -6,18 +6,27 @@
     android:layout_height="match_parent"
     android:background="#4E4E4E">
 
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/editText"
+        android:layout_width="199dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="76dp"
+        android:hint="העיר שלך"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
+
     <TextView
         android:id="@+id/textView18"
         android:layout_width="93dp"
         android:layout_height="23dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="32dp"
         android:text="מספר טלפון:"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
         android:textColorLink="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintHorizontal_bias="0.949"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
@@ -25,8 +34,8 @@
         android:id="@+id/textView17"
         android:layout_width="93dp"
         android:layout_height="23dp"
-        android:layout_marginTop="12dp"
-        android:text="מספר טלפון:"
+        android:layout_marginTop="32dp"
+        android:text="עיר מגורים:"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
@@ -40,7 +49,7 @@
         android:id="@+id/textView15"
         android:layout_width="93dp"
         android:layout_height="23dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="32dp"
         android:text="מייל:"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
@@ -55,8 +64,9 @@
         android:id="@+id/textView14"
         android:layout_width="93dp"
         android:layout_height="23dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="32dp"
         android:text="שם מלא:"
+        android:textAlignment="textStart"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
@@ -69,7 +79,7 @@
     <ScrollView
         android:id="@+id/search_scrollView"
         android:layout_width="393dp"
-        android:layout_height="348dp"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.571"
@@ -90,6 +100,7 @@
                     android:layout_height="25dp"
                     android:layout_marginEnd="32dp"
                     android:text="שם ספר"
+                    android:textAlignment="center"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -139,17 +150,70 @@
 
     <TextView
         android:id="@+id/textView13"
-        android:layout_width="93dp"
-        android:layout_height="23dp"
+        android:layout_width="118dp"
+        android:layout_height="34dp"
         android:layout_marginTop="12dp"
-        android:text="פרטים אישיים:"
+        android:text="פרטים אישיים"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
         android:textColorLink="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.943"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+    <EditText
+        android:id="@+id/editTextPhone"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="מספר הטלפון שלך"
+        android:inputType="phone"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toStartOf="@+id/textView18"
+        app:layout_constraintHorizontal_bias="0.386"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputEditText8" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText7"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="48dp"
+        android:hint="השם שלך"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toStartOf="@+id/textView14"
+        app:layout_constraintHorizontal_bias="0.386"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:text="המייל שלך"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/textView15"
+        app:layout_constraintHorizontal_bias="0.38"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputEditText7" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText8"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:hint="העיר שלך"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toStartOf="@+id/textView17"
+        app:layout_constraintHorizontal_bias="0.386"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
